--- a/index.html
+++ b/index.html
@@ -229,10 +229,19 @@
         </div>
       </div>
     </div>
+     <script src="./funtions/calculateBill.js" charset="utf-8"></script>
+    <script src="./funtions/radioBill.js" charset="utf-8"></script>
+    <script src="./funtions/settings-bill-function.js" charset="utf-8"></script>
+    <script src="./funtions/textBill.js" charset="utf-8"></script>
+
     <script src="js/calculate-bill.js" charset="utf-8"></script>
+    
+
     <script src="js/text-bill.js" charset="utf-8"></script>
     <script src="js/radio-bill.js" charset="utf-8"></script>
     <script src="js/settings-bill.js" charset="utf-8"></script>
+    
+   
 
   </body>
 </html>
